posiGen_FullsendBox/src/objects/Prospect__c.object
<CustomObject>
    <fields>
        <fullName>Unique_Ownership_Details__c</fullName>
        <inlineHelpText>Provide as much detail regarding the ownership situation as possible to allow admin to research more.</inlineHelpText>
        <label>Unique Ownership Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unqualified_Reason__c</fullName>
        <label>Unqualified Reason</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paperwork Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof Assessment Not Feasible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Hot Water Heater Not Feasible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too Expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Reach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Already Has Solar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Verified_name_spellings_with_customer__c</fullName>
        <description>Verified name spellings.</description>
        <label>Verified name spellings with customer?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>created_date_time__c</fullName>
        <label>created date/time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>created_day__c</fullName>
        <formula>CASE(MOD( DATEVALUE(CreatedDate) - DATE(1900, 1, 6), 7), 0, &quot;Saturday&quot;, 1, &quot;Sunday&quot;, 2,&quot;Monday&quot;, 3, &quot;Tuesday&quot;, 4, &quot;Wednesday&quot;, 5, &quot;Thursday&quot;, 6,&quot;Friday&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>created day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>roofcondition__c</fullName>
        <description>Condition of customers roof</description>
        <inlineHelpText>We are not able to install solar panels on roofs which may need repair.</inlineHelpText>
        <label>What is the condition of your roof?</label>
        <picklist>
            <picklistValues>
                <fullName>Not Sure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New / Fair (&lt;10 years old)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Replacing (&gt;10 years old)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Prospect</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>LeadSource__c</columns>
        <columns>Phone__c</columns>
        <columns>Ready_To_Sync__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Lead_Queue_Prospect</fullName>
        <filterScope>Queue</filterScope>
        <label>Lead Queue</label>
        <queue>Lead_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Recently_created</fullName>
        <columns>NAME</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>Lead__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>IsConverted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>10/4/2016 12:00 AM</value>
        </filters>
        <label>Recently created</label>
    </listViews>
    <nameField>
        <displayFormat>P{00000000}</displayFormat>
        <label>Prospect Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prospects</pluralLabel>
    <recordTypes>
        <fullName>SF2</fullName>
        <active>true</active>
        <label>SF2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_Edit_Converted_Prospect</fullName>
        <active>true</active>
        <errorConditionFormula>/*not(ISBLANK(Lead__r.ConvertedDate) )*/
PRIORVALUE(IsConverted__c)</errorConditionFormula>
        <errorMessage>You cannot edit a prospect record that has already been converted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Client_Ownership_and_Details</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Client_has_a_unique_ownership_situation__c , ISBLANK( Unique_Ownership_Details__c ) )</errorConditionFormula>
        <errorDisplayField>Unique_Ownership_Details__c</errorDisplayField>
        <errorMessage>You must provide ownership details is &quot;Client has a unique ownership situations&quot; is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DoNotCall_Lock</fullName>
        <active>true</active>
        <errorConditionFormula>and(ISCHANGED(DoNotCall__c),
    NOT(DoNotCall__c),
    NOT( $User.ProfileId = &quot;00ed0000000tWnG&quot;)
    )</errorConditionFormula>
        <errorDisplayField>DoNotCall__c</errorDisplayField>
        <errorMessage>You Cannot Uncheck the Do Not Call box</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Email_Unsubscribe_Lock</fullName>
        <active>true</active>
        <errorConditionFormula>and(ISCHANGED( HasOptedOutOfEmail__c ),
    NOT(HasOptedOutOfEmail__c),
    NOT( $User.ProfileId = &quot;00ed0000000tWnG&quot;)
    )</errorConditionFormula>
        <errorDisplayField>HasOptedOutOfEmail__c</errorDisplayField>
        <errorMessage>You Cannot Uncheck the Email Opt Out box</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_Lead_Source</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED( LeadSource__c ) ,
 Lock_Lead_Source__c )</errorConditionFormula>
        <errorDisplayField>LeadSource__c</errorDisplayField>
        <errorMessage>You cannot change the lead source once it is set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Number_of_Months_Past_Due_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  Are_you_past_due_on_your_electric_bill__c  = TRUE , ISBLANK( Number_of_Months_Past_Due__c ) )</errorConditionFormula>
        <errorDisplayField>Number_of_Months_Past_Due__c</errorDisplayField>
        <errorMessage>Number of Months Past Due cannot be blank if &quot;Are you past due on your electric bill?&quot; is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Owner_change_restriction</fullName>
        <active>true</active>
        <description>lead owner change can only be changed by sales or telemarketing manager</description>
        <errorConditionFormula>AND(
ISCHANGED(OwnerId),
NOT( $User.ProfileId = &quot;00ed0000000WhYl&quot;),
NOT( $User.ProfileId = &quot;00ed0000000X2nD&quot;),
NOT( $User.ProfileId = &quot;00ed0000000X20L&quot;),
NOT( $User.Username = &quot;mmann@posigen.com&quot;),
NOT( $User.ProfileId = &quot;00ed0000000tWnG&quot;),
NOT( $User.ProfileId = &quot;00ed0000000WhP5&quot;),
NOT(  $User.Id  = &quot;005d0000006701S&quot;)
)</errorConditionFormula>
        <errorDisplayField>OwnerId</errorDisplayField>
        <errorMessage>Only Sales and Telemarketing Managers can change Lead Owner.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_for_Past_Due_Must_Not_Be_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Are_you_past_due_on_your_electric_bill__c  = TRUE, ISBLANK( Reason_for_Past_Due__c ) )</errorConditionFormula>
        <errorDisplayField>Reason_for_Past_Due__c</errorDisplayField>
        <errorMessage>Reason for Past Due cannot be blank if &quot;Are you past due on your electric bill?&quot; is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unique_Ownership</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT( ISBLANK( Unique_Ownership_Details__c ) ) ,  AND( Client_has_a_unique_ownership_situation__c =FALSE))</errorConditionFormula>
        <errorDisplayField>Client_has_a_unique_ownership_situation__c</errorDisplayField>
        <errorMessage>You must check &quot;Client has a unique ownership situation&quot; is the Unique Ownership Details are filled in.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unqualified_Validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISPICKVAL( Contact_Status__c , &quot;Unqualified&quot;),   ISPICKVAL( Unqualified_Reason__c ,&quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Unqualified_Reason__c</errorDisplayField>
        <errorMessage>When Status is Unqualified, you must select an Unqualified Reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unsubscribe_Lock</fullName>
        <active>true</active>
        <errorConditionFormula>and(ISCHANGED( HasOptedOutOfEmail__c ),
    NOT(HasOptedOutOfEmail__c),
    NOT( $User.ProfileId = &quot;00ed0000000tWnG&quot;)
    )</errorConditionFormula>
        <errorDisplayField>HasOptedOutOfEmail__c</errorDisplayField>
        <errorMessage>You Cannot Uncheck the Email Opt Out box</errorMessage>
    </validationRules>
</CustomObject>